--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,31 @@
 [package]
 name = "tree-sitter-go"
-description = "Go grammar for tree-sitter"
-version = "0.23.0"
+description = "Go grammar for the tree-sitter parsing library"
+version = "0.19.1"
 authors = [
-  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
-  "Amaan Qureshi <amaanq12@gmail.com>",
+    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
+    "Douglas Creager <dcreager@dcreager.net>",
 ]
 license = "MIT"
-keywords = ["incremental", "parsing", "tree-sitter", "go"]
+readme = "bindings/rust/README.md"
+keywords = ["incremental", "parsing", "go"]
 categories = ["parsing", "text-editors"]
 repository = "https://github.com/tree-sitter/tree-sitter-go"
-edition = "2021"
-autoexamples = false
+edition = "2018"
 
 build = "bindings/rust/build.rs"
-include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
+include = [
+  "bindings/rust/*",
+  "grammar.js",
+  "queries/*",
+  "src/*",
+]
 
 [lib]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter-language = "0.1.0"
+tree-sitter = ">= 0.19, < 0.21"
 
 [build-dependencies]
-cc = "1.0.90"
-
-[dev-dependencies]
-tree-sitter = "0.23.0"
+cc = "1.0"
